fix multiple display issues on mobile devices

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -300,7 +300,7 @@ a {
   height: 100px;
   width: 100px;
   margin: 0 auto;
-  opacity: 0;
+  opacity: 1;
   display: flex;
   justify-content: center;
   align-items: center;
